Fix the capital project budget more readable
*x labels
fatter bars

--- a/client/css/app.css
+++ b/client/css/app.css
@@ -529,7 +529,8 @@ a.filter-button {
 }
 
 .chart-label {
-    font-size: x-small;
+    font-size: small;
+    font-weight: bold;
     
 }
 
